[project]
name = "cyb-travail-session"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"pandas>=1.3",
	"numpy>=1.21",
	"scikit-learn>=1.0",
	"matplotlib>=3.5",
	"seaborn>=0.11",
	"plotly>=5.0",
	"scipy>=1.8",
	"notebook>=6.0",
	"ipykernel>=6.0",
]
